@@ -1,4 +1,4 @@
-/* $NetBSD: mfivar.h,v 1.6 2007/11/16 08:00:14 xtraeme Exp $ */
+/* $NetBSD: mfivar.h,v 1.7 2008/02/25 10:46:02 xtraeme Exp $ */
 /* $OpenBSD: mfivar.h,v 1.28 2006/08/31 18:18:46 marco Exp $ */
 /*
  * Copyright (c) 2006 Marco Peereboom <marco@peereboom.us>
@@ -21,7 +21,7 @@
 
 #define DEVNAME(_s)     ((_s)->sc_dev.dv_xname)
 
-// #define MFI_DEBUG
+/* #define MFI_DEBUG */
 #ifdef MFI_DEBUG
 extern uint32_t			mfi_debug;
 #define DPRINTF(x...)		do { if (mfi_debug) printf(x); } while(0)
@@ -96,14 +96,28 @@ struct mfi_ccb {
 
 TAILQ_HEAD(mfi_ccb_list, mfi_ccb);
 
+enum mfi_iop {
+	MFI_IOP_XSCALE,
+	MFI_IOP_PPC
+};
+
+struct mfi_iop_ops {
+	uint32_t 		(*mio_fw_state)(struct mfi_softc *);
+	void 			(*mio_intr_ena)(struct mfi_softc *);
+	int 			(*mio_intr)(struct mfi_softc *);
+	void 			(*mio_post)(struct mfi_softc *, struct mfi_ccb *);
+};
+
 struct mfi_softc {
 	struct device		sc_dev;
 	struct scsipi_channel	sc_chan;
 	struct scsipi_adapter	sc_adapt;
 
+	const struct mfi_iop_ops *sc_iop;
+
 	void			*sc_ih;
 
-	u_int32_t		sc_flags;
+	uint32_t		sc_flags;
 
 	bus_space_tag_t		sc_iot;
 	bus_space_handle_t	sc_ioh;
@@ -150,5 +164,5 @@ struct mfi_softc {
 
 };
 
-int	mfi_attach(struct mfi_softc *sc);
+int	mfi_attach(struct mfi_softc *sc, enum mfi_iop);
 int	mfi_intr(void *);
